--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.0.1",
     "expo": "~42.0.1",
+    "expo-camera": "^11.2.2",
     "expo-constants": "^11.0.1",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.9",
