--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.0.1",
     "expo": "~42.0.1",
+    "expo-av": "^9.2.3",
     "expo-camera": "^11.2.2",
     "expo-constants": "^11.0.1",
+    "expo-media-library": "~12.1.2",
+    "expo-permissions": "~12.1.1",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-beautiful-video-recorder": "^2.0.1",
     "react-native-document-picker": "^5.2.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.9.2",
