--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
     "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-native-picker/picker": "^1.16.6",
     "@react-navigation/bottom-tabs": "^6.0.2",
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.0.1",
     "expo": "~42.0.1",
-    "expo-av": "^9.2.3",
+    "expo-av": "~9.2.3",
     "expo-camera": "^11.2.2",
     "expo-constants": "^11.0.1",
     "expo-media-library": "~12.1.2",
@@ -34,7 +35,8 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "react-native-maps": "0.28.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
