--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-beautiful-video-recorder": "^2.0.1",
     "react-native-document-picker": "^5.2.0",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-maps": "0.28.0",
     "react-native-paper": "^4.9.2",
     "react-native-radio-buttons": "^1.0.0",
     "react-native-radio-buttons-group": "^2.2.5",
@@ -35,8 +37,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.0",
-    "react-native-maps": "0.28.0"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
