--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-native-document-picker": "^5.2.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-gallery": "^2.1.5",
+    "react-native-image-slider-box": "^1.1.7",
     "react-native-maps": "0.28.0",
     "react-native-paper": "^4.9.2",
     "react-native-radio-buttons": "^1.0.0",
