--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.0.1",
     "expo": "~42.0.1",
     "expo-av": "~9.2.3",
+    "expo-barcode-scanner": "~10.2.2",
     "expo-camera": "^11.2.2",
     "expo-constants": "^11.0.1",
     "expo-media-library": "~12.1.2",
@@ -38,9 +39,9 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.0",
-    "expo-barcode-scanner": "~10.2.2"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
